--- a/COMPLIANCE.yaml
+++ b/COMPLIANCE.yaml
@@ -5,7 +5,7 @@ description: |
 spec:
   - name: PIA
     status: in-progress
-    last-updated: '2022-06-13T23:44:11.556Z'
+    last-updated: 
   - name: STRA
     status: in-progress
-    last-updated: '2022-06-13T23:44:11.556Z'
+    last-updated: 
