--- a/client/wfim-incident-manager-war/src/main/angular/angular.json
+++ b/client/wfim-incident-manager-war/src/main/angular/angular.json
@@ -15,7 +15,6 @@
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
                         "preserveSymlinks": true,
-                        "aot": true,
                         "baseHref": "/pub/wfim/",
                         "outputPath": "dist/pub/wfim",
                         "index": "src/index.html",
@@ -48,7 +47,13 @@
                             "node_modules/popper.js/dist/umd/popper.min.js",
                             "src/assets/js/visualize.js/visualize.js",
                             "node_modules/@qqnluaq/smk/dist/smk.js"
-                        ]
+                        ],
+                        "vendorChunk": true,
+                        "extractLicenses": false,
+                        "buildOptimizer": false,
+                        "sourceMap": true,
+                        "optimization": false,
+                        "namedChunks": true
                     },
                     "configurations": {
                         "production": {
@@ -66,7 +71,6 @@
                             "outputHashing": "all",
                             "sourceMap": false,
                             "namedChunks": false,
-                            "aot": true,
                             "extractLicenses": true,
                             "vendorChunk": false,
                             "buildOptimizer": true,
@@ -78,7 +82,8 @@
                             ],
                             "serviceWorker": true
                         }
-                    }
+                    },
+                    "defaultConfiguration": ""
                 },
                 "serve": {
                     "builder": "@angular-devkit/build-angular:dev-server",
