--- a/client/wfim-incident-manager-war/src/main/angular/package.json
+++ b/client/wfim-incident-manager-war/src/main/angular/package.json
@@ -7,29 +7,29 @@
     "serve": "ng serve",
     "serve.local.proxy": "ng serve --disableHostCheck true",
     "start": "ng serve --proxy-config ../dm-proxy/proxy.conf.json",
-    "start.prod": "ng serve --prod",
+    "start.prod": "ng serve --configuration production",
     "build": "ng build",
-    "build.prod": "ng build --prod --base-href /pub/wfim/ && replace-in-file /ngsw:/g ngsw:wfimi: dist/ngsw-worker.js --verbose --isRegex",
+    "build.prod": "ng build --configuration production --base-href /pub/wfim/ && replace-in-file /ngsw:/g ngsw:wfimi: dist/ngsw-worker.js --verbose --isRegex",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "cr": "npm run lint && npm start.prod",
-    "mavenbuild": "node --max_old_space_size=4096 node_modules/@angular/cli/bin/ng build --prod --output-path ../../../target/angular --base-href /pub/wfim/ && replace-in-file /ngsw:/g ngsw:wfimi: dist/ngsw-worker.js --verbose --isRegex",
-    "mavenbuild-source-map": "node --max_old_space_size=4096 node_modules/@angular/cli/bin/ng build --prod --output-path ../../../target/angular --base-href /pub/wfim/ --source-map && replace-in-file /ngsw:/g ngsw:wfimi: ../../../target/angular/ngsw-worker.js --verbose --isRegex"
+    "mavenbuild": "node --max_old_space_size=4096 node_modules/@angular/cli/bin/ng build --configuration production --output-path ../../../target/angular --base-href /pub/wfim/ && replace-in-file /ngsw:/g ngsw:wfimi: dist/ngsw-worker.js --verbose --isRegex",
+    "mavenbuild-source-map": "node --max_old_space_size=4096 node_modules/@angular/cli/bin/ng build --configuration production --output-path ../../../target/angular --base-href /pub/wfim/ --source-map && replace-in-file /ngsw:/g ngsw:wfimi: ../../../target/angular/ngsw-worker.js --verbose --isRegex"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.14",
+    "@angular/animations": "^12.2.16",
     "@angular/cdk": "^11.2.13",
-    "@angular/common": "^11.2.14",
-    "@angular/compiler": "^11.2.14",
-    "@angular/core": "^11.2.14",
-    "@angular/forms": "^11.2.14",
+    "@angular/common": "^12.2.16",
+    "@angular/compiler": "^12.2.16",
+    "@angular/core": "^12.2.16",
+    "@angular/forms": "^12.2.16",
     "@angular/material": "^11.2.13",
-    "@angular/platform-browser": "^11.2.14",
-    "@angular/platform-browser-dynamic": "^11.2.14",
-    "@angular/router": "^11.2.14",
-    "@angular/service-worker": "^11.2.14",
+    "@angular/platform-browser": "^12.2.16",
+    "@angular/platform-browser-dynamic": "^12.2.16",
+    "@angular/router": "^12.2.16",
+    "@angular/service-worker": "^12.2.16",
     "@busacca/ng-pick-datetime": "^10.0.0",
     "@ngrx/effects": "^11.1.1",
     "@ngrx/router-store": "^11.1.1",
@@ -63,14 +63,14 @@
     "tslib": "^2.0.0",
     "vanilla-text-mask": "^5.1.1",
     "video.js": "^7.15.4",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.14",
-    "@angular-devkit/core": "^11.2.14",
-    "@angular/cli": "~11.2.14",
-    "@angular/compiler-cli": "^11.2.14",
-    "@angular/language-service": "^11.2.14",
+    "@angular-devkit/build-angular": "~12.2.17",
+    "@angular-devkit/core": "^12.2.17",
+    "@angular/cli": "~12.2.17",
+    "@angular/compiler-cli": "^12.2.16",
+    "@angular/language-service": "^12.2.16",
     "@ngrx/schematics": "^12.2.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.2",
@@ -88,6 +88,6 @@
     "replace-in-file": "^3.4.2",
     "ts-node": "~3.2.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.8"
+    "typescript": "~4.3.5"
   }
 }
