--- a/client/wfnews-war/src/main/angular/package.json
+++ b/client/wfnews-war/src/main/angular/package.json
@@ -20,12 +20,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^13.3.11",
-    "@angular/cdk": "^12.2.13",
+    "@angular/cdk": "^13.3.9",
     "@angular/common": "^13.3.11",
     "@angular/compiler": "^13.3.11",
     "@angular/core": "^13.3.11",
     "@angular/forms": "^13.3.11",
-    "@angular/material": "^12.2.13",
+    "@angular/material": "^13.3.9",
     "@angular/platform-browser": "^13.3.11",
     "@angular/platform-browser-dynamic": "^13.3.11",
     "@angular/router": "^13.3.11",
@@ -58,6 +58,7 @@
     "ngx-mask": "^6.5.18",
     "ngx-moment": "^3.1.0",
     "ngx-treeview": "^6.0.2",
+    "node-sass": "^7.0.1",
     "popper.js": "^1.14.4",
     "rxjs": "6.6.7",
     "rxjs-tslint": "^0.1.8",
