update server test to use mvn test

--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -225,8 +225,7 @@ jobs:
       - name: Tests
         run: |
           cd server
-          npm ci
-          npm test
+          mvn test
 
   trivy-server:
     name: Trivy-Server
