delete unused stuff part 4

--- a/client/wfnews-war/src/main/angular/angular.json
+++ b/client/wfnews-war/src/main/angular/angular.json
@@ -15,8 +15,8 @@
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
                         "preserveSymlinks": true,
-                        "baseHref": "/pub/wfim/",
-                        "outputPath": "dist/pub/wfim",
+                        "baseHref": "/wfnews/",
+                        "outputPath": "dist/wfnews",
                         "index": "src/index.html",
                         "main": "src/main.ts",
                         "tsConfig": "src/tsconfig.app.json",
