rename to wfnews

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>ca.bc.gov.nrs.wfim</groupId>
-	<artifactId>wfim-incident-manager-parent</artifactId>
+	<groupId>ca.bc.gov.nrs.wfnews</groupId>
+	<artifactId>wfnews-r-parent</artifactId>
 	<version>1.5.6</version>
 	<packaging>pom</packaging>
-	<name>wfim-incident-manager-parent</name>
+	<name>wfnews-parent</name>
 	<modules>
-		<module>wfim-incident-manager-ear</module>
-		<module>wfim-incident-manager-war</module>
+		<module>wfnews-ear</module>
+		<module>wfnews-war</module>
 	</modules>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
