--- a/client/wfnews-war/src/main/angular/src/manifest.json
+++ b/client/wfnews-war/src/main/angular/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "WFIM",
-  "short_name": "WFIM",
+  "name": "WFNEWS",
+  "short_name": "WFNEWS",
   "theme_color": "#1976d2",
   "background_color": "#fafafa",
   "display": "standalone",
