--- a/client/wfnews-ear/pom.xml
+++ b/client/wfnews-ear/pom.xml
@@ -1,19 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>ca.bc.gov.nrs.wfim</groupId>
-		<artifactId>wfim-incident-manager-parent</artifactId>
+		<groupId>ca.bc.gov.nrs.wfnews</groupId>
+		<artifactId>wfnews-parent</artifactId>
 		<version>1.5.6</version>
 	</parent>
-	<artifactId>wfim-incident-manager-ear</artifactId>
+	<artifactId>wfnews-ear</artifactId>
 	<packaging>ear</packaging>
-	<name>wfim-incident-manager-ear</name>
+	<name>wfnews-ear</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
 
 		<dependency>
-			<groupId>ca.bc.gov.nrs.wfim</groupId>
-			<artifactId>wfim-incident-manager-war</artifactId>
+			<groupId>ca.bc.gov.nrs.wfnews</groupId>
+			<artifactId>wfnews-war</artifactId>
 			<version>${project.parent.version}</version>
 			<type>war</type>
 		</dependency>
@@ -27,13 +27,13 @@
 				<version>2.8</version>
 				<configuration>
 					<version>1.4</version>
-					<applicationName>wfim-incident-manager-ear</applicationName>
+					<applicationName>wfnews-ear</applicationName>
 					<fileNameMapping>no-version</fileNameMapping>
 					<modules>
 						<webModule>
-							<groupId>ca.bc.gov.nrs.wfim</groupId>
-							<artifactId>wfim-incident-manager-war</artifactId>
-							<contextRoot>wfim</contextRoot>
+							<groupId>ca.bc.gov.nrs.wfnews</groupId>
+							<artifactId>wfnews-war</artifactId>
+							<contextRoot>wfnews</contextRoot>
 						</webModule>
 					</modules>
 				</configuration>
