--- a/server/pom.xml
+++ b/server/pom.xml
@@ -25,6 +25,18 @@
 	<dependencyManagement>
 		<dependencies>
 
+		<dependency>
+			<groupId>org.codehaus.plexus</groupId>
+			<artifactId>plexus-utils</artifactId>
+			<version>3.4.2</version>
+		</dependency>
+
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context</artifactId>
+				<version>5.3.18</version>
+			</dependency>
+
 			<dependency>
 				<groupId>ca.bc.gov.webade</groupId>
 				<artifactId>webade-spring-bootstrap-support</artifactId>
