--- a/server/pom.xml
+++ b/server/pom.xml
@@ -25,12 +25,6 @@
 	<dependencyManagement>
 		<dependencies>
 
-		<dependency>
-			<groupId>org.codehaus.plexus</groupId>
-			<artifactId>plexus-utils</artifactId>
-			<version>3.4.2</version>
-		</dependency>
-
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-context</artifactId>
@@ -83,10 +77,11 @@
 			</dependency>
 
 			<dependency>
-				<groupId>ca.bc.gov.nrs.wfone.common</groupId>
-				<artifactId>wfone-common-model</artifactId>
-				<version>1.3.0</version>
-			</dependency>
+-               <groupId>ca.bc.gov.nrs.wfone.common</groupId>
+-               <artifactId>wfone-common-model</artifactId>
+-               <version>1.3.0</version>
+-           </dependency>
+	
 			<dependency>
 				<groupId>ca.bc.gov.nrs.wfone.common</groupId>
 				<artifactId>wfone-common-rest-common</artifactId>
