--- a/client/pom.xml
+++ b/client/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ca.bc.gov.nrs.wfnews</groupId>
-	<artifactId>wfnews-r-parent</artifactId>
-	<version>1.5.6</version>
+	<artifactId>wfnews-parent</artifactId>
+	<version>1.0.0</version>
 	<packaging>pom</packaging>
 	<name>wfnews-parent</name>
 	<modules>
@@ -19,31 +19,6 @@
 
 	<dependencyManagement>
 		<dependencies>
-
-			<dependency>
-				<groupId>jakarta.xml.bind</groupId>
-				<artifactId>jakarta.xml.bind-api</artifactId>
-				<version>2.3.2</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.glassfish.jaxb</groupId>
-				<artifactId>jaxb-runtime</artifactId>
-				<version>2.3.2</version>
-			</dependency>
-
-			<dependency>
-			    <groupId>javax.ws.rs</groupId>
-			    <artifactId>javax.ws.rs-api</artifactId>
-			    <version>2.0.1</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.glassfish.jersey.core</groupId>
-				<artifactId>jersey-common</artifactId>
-				<version>2.16</version>
-			</dependency>
-
 			<!-- WebADE Rest -->
 
 			<dependency>
@@ -87,54 +62,54 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>3.1.3.RELEASE</version>
+			<version>5.3.18</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-expression</artifactId>
-			<version>3.1.3.RELEASE</version>
+			<version>5.3.18</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
-			<version>3.1.3.RELEASE</version>
+			<version>5.3.18</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
-			<version>3.1.3.RELEASE</version>
+			<version>5.3.18</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>3.1.3.RELEASE</version>
+			<version>5.3.18</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>3.1.3.RELEASE</version>
+			<version>5.3.18</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>3.1.3.RELEASE</version>
+			<version>5.3.18</version>
 		</dependency>
 
 		<!-- Spring Security -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
-			<version>3.1.2.RELEASE</version>
+			<version>5.3.2.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
-			<version>3.1.2.RELEASE</version>
+			<version>5.3.2.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
-			<version>3.1.2.RELEASE</version>
+			<version>5.3.2.RELEASE</version>
 		</dependency>
 
 		<!-- Spring Security OAuth -->
@@ -145,35 +120,10 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.tuckey</groupId>
-			<artifactId>urlrewritefilter</artifactId>
-			<version>4.0.4</version>
-		</dependency>
-
-		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
 		</dependency>
-
-	    <dependency>
-	      <groupId>com.fasterxml.jackson.core</groupId>
-	      <artifactId>jackson-databind</artifactId>
-	      <version>2.8.6</version>
-	    </dependency>
-	    <!-- JWT-->
-	    <dependency>
-	      <groupId>com.nimbusds</groupId>
-	      <artifactId>nimbus-jose-jwt</artifactId>
-	      <version>4.33</version>
-	    </dependency>
-
-	    <!-- encryption, required for JWE -->
-	      <dependency>
-	        <groupId>org.bouncycastle</groupId>
-	        <artifactId>bcprov-jdk15on</artifactId>
-	        <version>1.56</version>
-	    </dependency>
 
 		<!-- Logging -->
 		<dependency>
@@ -209,41 +159,6 @@
 				<version>2.6</version>
 			</dependency>
 
-			<!-- ORACLE database driver -->
-			<dependency>
-				<groupId>com.oracle.weblogic</groupId>
-				<artifactId>ojdbc7</artifactId>
-				<version>12.1.3-0-0</version>
-			</dependency>
-
-			<!-- JUNIT -->
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>4.11</version>
-			</dependency>
-
-			<!-- Jetty -->
-			<dependency>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-server</artifactId>
-				<version>7.6.17.v20150415</version>
-			</dependency>
-			<dependency>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-webapp</artifactId>
-				<version>7.6.17.v20150415</version>
-			</dependency>
-			<dependency>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-jndi</artifactId>
-				<version>7.6.17.v20150415</version>
-			</dependency>
-			<dependency>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-plus</artifactId>
-				<version>7.6.17.v20150415</version>
-			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
