--- a/server/pom.xml
+++ b/server/pom.xml
@@ -26,6 +26,12 @@
 		<dependencies>
 
 			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context</artifactId>
+				<version>5.3.18</version>
+			</dependency>
+
+			<dependency>
 				<groupId>ca.bc.gov.webade</groupId>
 				<artifactId>webade-spring-bootstrap-support</artifactId>
 				<version>1.1.0.0</version>
@@ -71,10 +77,11 @@
 			</dependency>
 
 			<dependency>
-				<groupId>ca.bc.gov.nrs.wfone.common</groupId>
-				<artifactId>wfone-common-model</artifactId>
-				<version>1.3.0</version>
-			</dependency>
+-               <groupId>ca.bc.gov.nrs.wfone.common</groupId>
+-               <artifactId>wfone-common-model</artifactId>
+-               <version>1.3.0</version>
+-           </dependency>
+	
 			<dependency>
 				<groupId>ca.bc.gov.nrs.wfone.common</groupId>
 				<artifactId>wfone-common-rest-common</artifactId>
