--- a/server/pom.xml
+++ b/server/pom.xml
@@ -77,10 +77,11 @@
 			</dependency>
 
 			<dependency>
-				<groupId>ca.bc.gov.nrs.wfone.common</groupId>
-				<artifactId>wfone-common-model</artifactId>
-				<version>1.3.0</version>
-			</dependency>
+-               <groupId>ca.bc.gov.nrs.wfone.common</groupId>
+-               <artifactId>wfone-common-model</artifactId>
+-               <version>1.3.0</version>
+-           </dependency>
+	
 			<dependency>
 				<groupId>ca.bc.gov.nrs.wfone.common</groupId>
 				<artifactId>wfone-common-rest-common</artifactId>
