--- a/server/pom.xml
+++ b/server/pom.xml
@@ -26,12 +26,6 @@
 		<dependencies>
 
 			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-context</artifactId>
-				<version>5.3.18</version>
-			</dependency>
-
-			<dependency>
 				<groupId>ca.bc.gov.webade</groupId>
 				<artifactId>webade-spring-bootstrap-support</artifactId>
 				<version>1.1.0.0</version>
@@ -59,11 +53,16 @@
 				<version>5.3.18</version>
 			</dependency>
 			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-webmvc</artifactId>
+				<version>5.3.18</version>
+			</dependency>
+			<dependency>
 				<groupId>org.springframework.security</groupId>
 				<artifactId>spring-security-config</artifactId>
 				<version>5.3.2.RELEASE</version>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>com.oracle.weblogic</groupId>
 				<artifactId>ojdbc7</artifactId>
@@ -75,13 +74,11 @@
 				<artifactId>javax.servlet-api</artifactId>
 				<version>3.1.0</version>
 			</dependency>
-
 			<dependency>
--               <groupId>ca.bc.gov.nrs.wfone.common</groupId>
--               <artifactId>wfone-common-model</artifactId>
--               <version>1.3.0</version>
--           </dependency>
-	
+				<groupId>ca.bc.gov.nrs.wfone.common</groupId>
+				<artifactId>wfone-common-model</artifactId>
+				<version>1.3.0</version>
+			</dependency>
 			<dependency>
 				<groupId>ca.bc.gov.nrs.wfone.common</groupId>
 				<artifactId>wfone-common-rest-common</artifactId>
@@ -127,11 +124,12 @@
 				<artifactId>wfone-common-checkhealth</artifactId>
 				<version>1.3.0</version>
 			</dependency>
+		
 
 			<dependency>
 				<groupId>org.postgresql</groupId>
 				<artifactId>postgresql</artifactId>
-				<version>42.3.3</version>
+				<version>42.2.14</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
