--- a/server/wfnews-service-api/pom.xml
+++ b/server/wfnews-service-api/pom.xml
@@ -86,6 +86,11 @@
 			<artifactId>wfdm-document-management-api-rest-client</artifactId>
 			<version>1.1.0</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -96,6 +101,11 @@
 		<dependency>
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-text</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
 		</dependency>
 
 		<!-- Logging -->
