--- a/server/pom.xml
+++ b/server/pom.xml
@@ -201,6 +201,14 @@
 				<artifactId>junit</artifactId>
 				<version>4.11</version>
 			</dependency>
+			
+			<dependency>
+			    <groupId>org.mockito</groupId>
+			    <artifactId>mockito-all</artifactId>
+			    <version>1.10.19</version>
+			    <scope>test</scope>
+			</dependency>
+
 
 		</dependencies>
 	</dependencyManagement>
