--- a/server/wfnews-api-rest-endpoints/pom.xml
+++ b/server/wfnews-api-rest-endpoints/pom.xml
@@ -178,6 +178,12 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-all</artifactId>
+		    <scope>test</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>ca.bc.gov.nrs.wfdm</groupId>
