WFNEWS-323 - Add incidents API functionality (#10)
* WFNEWS-323 - Add incidents API functionality

* Remove wfone-common-model explicit dependency version

* Remove unused maven plugin dependency and update postgresql dependency

* WFNEWS-323 Revert filtering to AGOL service and fix tests

Co-authored-by: Dylan <dylan.hemsworth@gmail.com>

--- a/server/wfnews-api-rest-endpoints/src/main/resources/application.properties
+++ b/server/wfnews-api-rest-endpoints/src/main/resources/application.properties
@@ -26,3 +26,4 @@ wfone.email.sync.send.frequency=#{wfone.email.sync.send.frequency}
 wfone.email.sync.error.subject=#{wfone.email.sync.error.subject}
 wfone.email.sync.subject=#{wfone.email.sync.subject}
 wfone.default.application.environment=#{wfone.default.application.environment}
+wfnews-agol-query.url=https://services6.arcgis.com/ubm4tcTYICKBpist/ArcGIS/rest/services/BCWS_ActiveFires_PublicView/FeatureServer/0/query?where=FIRE_STATUS+%3C%3E+'OUT'
