--- a/server/wfnews-api-rest-endpoints/pom.xml
+++ b/server/wfnews-api-rest-endpoints/pom.xml
@@ -36,7 +36,6 @@
 		<dependency>
 			<groupId>ca.bc.gov.nrs.wfone.common</groupId>
 			<artifactId>wfone-common-rest-endpoints</artifactId>
-			<version>1.3.0</version>
 		</dependency>
 
 		<dependency>
@@ -181,9 +180,9 @@
 		</dependency>
 		
 		<dependency>
-    		<groupId>org.apache.maven.plugins</groupId>
-    		<artifactId>maven-resources-plugin</artifactId>
-    		<version>2.6</version>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-all</artifactId>
+		    <scope>test</scope>
 		</dependency>
 
 		<dependency>
@@ -191,8 +190,7 @@
 			<artifactId>wfdm-document-management-api-rest-client</artifactId>
 			<version>1.1.0</version>
 		</dependency>
-
-
+		
 	</dependencies>
 	<build>
 		<!-- Configure the resources to be filtered for property replacement -->
