--- a/server/pom.xml
+++ b/server/pom.xml
@@ -60,7 +60,7 @@
 			<dependency>
 				<groupId>org.springframework.security</groupId>
 				<artifactId>spring-security-config</artifactId>
-				<version>5.3.2.RELEASE</version>
+				<version>5.5.7</version>
 			</dependency>
 			
 			<dependency>
