--- a/client/wfnews-war/src/main/angular/package.json
+++ b/client/wfnews-war/src/main/angular/package.json
@@ -48,6 +48,7 @@
     "file-size": "^1.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "karma-viewport": "^1.0.9",
     "leaflet": "^1.3.3",
     "moment": "^2.22.2",
     "ng-pick-datetime": "^6.0.16",
@@ -59,6 +60,7 @@
     "ngx-treeview": "^6.0.2",
     "node-sass": "^7.0.1",
     "popper.js": "^1.14.4",
+    "puppeteer": "^15.4.0",
     "rxjs": "6.6.7",
     "rxjs-tslint": "^0.1.8",
     "tslib": "^2.0.0",
@@ -75,7 +77,9 @@
     "@ngrx/schematics": "^12.2.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jest": "^28.1.6",
     "@types/node": "^12.11.1",
+    "bootstrap": "^5.1.3",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
