--- a/client/wfnews-war/src/main/angular/package.json
+++ b/client/wfnews-war/src/main/angular/package.json
@@ -31,10 +31,11 @@
     "@angular/router": "^13.3.11",
     "@angular/service-worker": "^13.3.11",
     "@busacca/ng-pick-datetime": "^10.0.0",
-    "@ngrx/effects": "^11.1.1",
-    "@ngrx/router-store": "^11.1.1",
-    "@ngrx/store": "^11.1.1",
-    "@ngrx/store-devtools": "^11.1.1",
+    "@ngrx/effects": "^13.1.0 ",
+    "@ngrx/entity": "^13.1.0",
+    "@ngrx/router-store": "^13.1.0 ",
+    "@ngrx/store": "^13.1.0 ",
+    "@ngrx/store-devtools": "^13.1.0 ",
     "@qqnluaq/smk": "^1.0.34",
     "@wf1/core-ui": "^2.4.5",
     "@wf1/incidents-rest-api": "^1.5.1-SNAPSHOT",
