--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,17 @@
 # Local .terraform directories
 **/.terraform/*
+**/.terraform*
 
 # .tfstate files
 *.tfstate
 *.tfstate.*
+
+# Terragrunt cache
+**/*.terragrunt*
+
+# .vscode files
+*.vscode
+*.vscode.*
 
 # Crash log files
 crash.log
@@ -26,4 +34,4 @@ override.tf.json
 # !example_override.tf
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
-# example: *tfplan*
+*tfplan*
