--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -19,4 +19,4 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots package
+        run: mvn --batch-mode --update-snapshots -f server/pom.xml package
