--- a/client/wfnews-war/src/main/angular/package.json
+++ b/client/wfnews-war/src/main/angular/package.json
@@ -67,7 +67,9 @@
     "tslib": "^2.0.0",
     "vanilla-text-mask": "^5.1.1",
     "video.js": "^7.15.4",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "ngx-pagination": "^5.1.1",
+    "ngx-connection-service": "7.0.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.8",
