--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -48,4 +48,4 @@ jobs:
               }
             ]
       - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots -f server/pom.xml package
+        run: mvn --settings settings.xml --batch-mode --update-snapshots -f server/pom.xml package
