--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -20,7 +20,7 @@ jobs:
           distribution: 'adopt'
       - name: Build with Maven
         run: mvn --settings server/mvn_settings/settings.xml --batch-mode --update-snapshots -f server/pom.xml -Drepo.login=${{ secrets.IDIR_AS_EMAIL }} -Drepo.password=${{ secrets.IDIR_PASSWORD }} -DskipTests package
-      - run: mkdir staging && cp target/*.war staging
+      - run: mkdir staging && cp **/target/*.war staging
       - uses: actions/upload-artifact@v3
         with:
          name: Package
