--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -30,6 +30,10 @@ jobs:
          name: Package
          path: staging
          
+  docker:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
         
@@ -41,7 +45,16 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+        
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: package
+          path: /temp
           
+      - name: Extract war file from package
+        run: unzip 'package*'
+        
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
