--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -40,25 +40,24 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: Package
+          path: /temp
+          
+      - name: Extract war file from package
+        run: unzip 'Package*'
+        
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
         
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: package
-          path: /temp
-          
-      - name: Extract war file from package
-        run: unzip 'package*'
-        
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: .
           push: true
           tags: user/app:latest
      
