--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -47,7 +47,7 @@ jobs:
           path: /tmp
           
       - name: Extract war file from package
-        run: unzip '/tmp/Package*'
+        run: unzip '/tmp/Package'
         
       - name: Login to DockerHub
         uses: docker/login-action@v2
