--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -44,7 +44,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: Package
-          path: /tmp
+          path: .
         
       - name: Login to DockerHub
         uses: docker/login-action@v2
