--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -32,6 +32,7 @@ jobs:
          
   docker:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
