--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -55,6 +55,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
+          context: /
           push: true
           tags: user/app:latest
      
