--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -42,10 +42,12 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
         
+      - run: cp dockerfile /
+        
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: .
+          context: /
           push: true
           tags: user/app:latest
      
