--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -23,7 +23,8 @@ jobs:
       - name: Build with Maven
         run: mvn --settings server/mvn_settings/settings.xml --batch-mode --update-snapshots -f server/pom.xml -Drepo.login=${{ secrets.IDIR_AS_EMAIL }} -Drepo.password=${{ secrets.IDIR_PASSWORD }} -DskipTests package
         
-      - run: mkdir staging && cp server/wfnews-api-rest-endpoints/target/*.war staging && cp server/wfnews-api-rest-endpoints/target/*.war .
+      - name: Copy files to neccessary folders
+        run: mkdir staging && cp server/wfnews-api-rest-endpoints/target/*.war staging && cp server/wfnews-api-rest-endpoints/target/*.war /tmp && cp dockerfile /tmp
       
       - uses: actions/upload-artifact@v3
         with:
@@ -45,7 +46,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: .
+          context: /tmp
           push: true
           tags: user/app:latest
      
