--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -24,7 +24,7 @@ jobs:
         run: mvn --settings server/mvn_settings/settings.xml --batch-mode --update-snapshots -f server/pom.xml -Drepo.login=${{ secrets.IDIR_AS_EMAIL }} -Drepo.password=${{ secrets.IDIR_PASSWORD }} -DskipTests package
         
       - name: Copy files to neccessary folders
-        run: mkdir staging && cp server/wfnews-api-rest-endpoints/target/*.war staging && cp server/wfnews-api-rest-endpoints/target/*.war /tmp && cp Dockerfile /tmp
+        run: mkdir staging && cp server/wfnews-api-rest-endpoints/target/*.war staging
       
       - uses: actions/upload-artifact@v3
         with:
@@ -37,6 +37,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: Package
+          path: .
+        
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
@@ -46,7 +52,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: /tmp
+          context: .
           push: true
           tags: user/app:latest
      
