--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: Package
-          path: .
+          path: "{{defaultContext}}"
         
       - name: Login to DockerHub
         uses: docker/login-action@v2
@@ -52,7 +52,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: .
+          context: "{{defaultContext}}"
           push: true
           tags: user/app:latest
      
