--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -41,7 +41,8 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: Package
-          path: "{{defaultContext}}"
+          
+      - run: unzip Package && ls
         
       - name: Login to DockerHub
         uses: docker/login-action@v2
