--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -42,7 +42,8 @@ jobs:
         with:
           name: Package
           
-      - run: unzip Package && ls
+      - name: Unzip artifact
+        run: echo "BEFORE UNZIPPING:" && ls && unzip Package && echo "AFTER UNZIPPING" && ls
         
       - name: Login to DockerHub
         uses: docker/login-action@v2
