--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -51,7 +51,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: "{{defaultContext}}"
+          context: ./
+          file: Dockerfile
           push: true
           tags: user/app:latest
      
