--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: ./
+          context: .
           file: Dockerfile
           push: true
           tags: user/app:latest
