--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -31,6 +31,18 @@ jobs:
          name: Package
          path: staging
          
+  docker:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: Package
+          path: .
+          
+      - run: echo "Checking dir" && ls
+      
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
         
