--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -43,7 +43,7 @@ jobs:
           name: Package
           path: .
           
-      - run: echo "Checking dir" && ls && echo "CHECKING HOME" && ls ~ && echo "PWD" && pwd
+      - run: echo "Checking dir" && ls && echo "CHECKING HOME" && ls ~/work -R && echo "PWD" && pwd
       
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
