Auto-fixes, removing some commented code, console output

--- a/client/wfnews-war/src/main/angular/.eslintrc.json
+++ b/client/wfnews-war/src/main/angular/.eslintrc.json
@@ -25,7 +25,7 @@
           "error",
           {
             "type": "element",
-            "prefix": false,
+            "prefix": ["false"],
             "style": "kebab-case"
           }
         ],
