--- a/.github/workflows/mvn-client.yml
+++ b/.github/workflows/mvn-client.yml
@@ -5,6 +5,7 @@ name: Build Client
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}-client
+  WEBADE_JCRS_URL: ${{ secrets.WEBADE_JCRS_URL }}
 
 # Controls when the workflow will run
 on:
