--- a/.github/workflows/click-build-dev.yml
+++ b/.github/workflows/click-build-dev.yml
@@ -8,8 +8,7 @@ env:
   EMAIL_ENABLED: true
   SMTP_HOSTNAME: sample_user
   SMTP_USER: sample_user@sample.com
-  #SMTP_PASSWORD: ${{ secrets.DEV_SMTP_PASSWORD}}
-  #DEV_SMTP_PASSWORD should be set in Settings > Secrets
+  SMTP_PASSWORD: ${{ secrets.DEV_SMTP_PASSWORD}}
   SMTP_FROM_EMAIL: noreply@sample.com
   ADMIN_EMAIL: admin_user@sample.com
   EMAIL_SYNC_ERROR_FREQUENCY: 30
@@ -32,6 +31,7 @@ jobs:
       SMTP_HOSTNAME: $SMTP_HOSTNAME
       SMTP_USER: $SMTP_USER
       SMTP_FROM_EMAIL: $SMTP_FROM_EMAIL
+      SMTP_PASSWORD: $SMTP_PASSWORD
       ADMIN_EMAIL: $ADMIN_EMAIL
       EMAIL_SYNC_ERROR_FREQUENCY: $EMAIL_SYNC_ERROR_FREQUENCY
       EMAIL_SYNC_SEND_FREQUENCY: $EMAIL_SYNC_SEND_FREQUENCY
